completed only strucute

--- a/index.html
+++ b/index.html
@@ -1,56 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css/index.css">
     <link rel="stylesheet" href="styles.css/responsive.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
+    </style>
 </head>
+
 <body>
     <header>
         <!-- navbar starts here -->
         <nav class="nav-container">
-          <div class="logo-container">
-            <img src="images/Frame.png" alt="">
-            <p>G<span>amer</span></p>
-          </div>
-          <div class="nav-item-container">
-            <a href="" class="us">About us</a>
-            <a href="" class="developers">Developers</a>
-            <a href="" class="follow">Follow us on</a>
-          </div>
+            <div class="logo-container">
+                <img src="images/Frame.png" alt="">
+                <p>G<span>amer</span></p>
+            </div>
+            <div class="nav-item-container">
+                <a href="" class="us">About us</a>
+                <a href="" class="developers">Developers</a>
+                <a href="" class="follow">Follow us on</a>
+            </div>
 
 
 
         </nav>
-<!-- navbar ends here -->
+        <!-- navbar ends here -->
     </header>
-    <main class="yo">
+    <main>
         <!-- goat section starts -->
         <section class="goat-container">
             <img src="images/Group 14.png" alt="">
             <div class="goat-content">
-                <h3>Play Like The</h3>
-                <h1>G.O.A.T</h1>
-               <ul>
+                <h3 class="tittle-1">Play Like The</h3>
+                <h1 class="tittle-2">G.O.A.T</h1>
+                <ul>
                     <li>1-Click instant play</li>
                     <li>No Download</li>
                     <li>1000s of supported online games</li>
                 </ul>
-                <button>SIGN IN</button>
-                <button>GO ROGUE</button>
+                <button class="btn-1">SIGN IN</button>
+                <button class="btn-2">GO ROGUE</button>
 
             </div>
             <div>
                 <img src="images/Group 18.png" alt="">
             </div>
         </section>
-<!-- goat section ends -->
-    </main>
-    <footer>
+        <!-- goat section ends -->
+        <!-- videos section starts -->
+        <section>
+            <div class="videos-tittle">
+                <h3>Online Games Funny Videos</h3>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
 
+            <div class="video-container">
+                <div>
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+
+        </section>
+        <!-- video section ends here -->
+        <!-- online game section starts -->
+        <section class="online-game-container">
+            <div>
+                <h3>Play Instantly,
+                    No Downloads
+                    No Installs.</h3>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 66.png" alt="">
+                <img src="images/Rectangle 55.png" alt="">
+
+            </div>
+        </section>
+        <!-- game type section  starts-->
+        <section class="game-type">
+            <div class="game-type-container">
+                <button>Action Games</button>
+                <button>Adventure Games</button>
+                <button id="arcade">Arcade Games</button>
+                <button>Educational Games</button>
+                <button>Word Games</button>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="logo">
+            <img src="images/Frame.png" alt="">
+        </div>
+        <div class="footer-tittle">
+            <p><span>G</span>amer</p>
+        </div>
+        </div>
+        <div>
+            <ul class="footer-content">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li> Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+            <ul class="footer-logo">
+                <li><img src="images/apple 1.svg"></li>
+                <li><img src="images/Group 49.svg" alt=""></li>
+                <li><img src="images/instagram 1.svg" alt=""></li>
+                <li><img src="images/linkedin 1.svg" alt=""></li>
+               
+            </ul>
+            <ul class="footer-terms">
+                <li>Terms and Conditions </li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li> Privacy Settings</li>
+            </ul>
+        </div>
+        <p class="footer-foot">
+            Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </p>
     </footer>
-    
+
 </body>
+
 </html>
