--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
     <footer class="footer">
         <div class="logo">
             <img src="images/Frame.png" alt="">
-        </div>
-        <div class="footer-tittle">
-            <p><span>G</span>amer</p>
-        </div>
+            <p class="footer-tittle"><span>G</span>amer</p>
         </div>
         <div>
             <ul class="footer-content">
@@ -123,23 +120,29 @@
                 <li>Support</li>
                 <li>My Account</li>
             </ul>
-            <ul class="footer-logo">
-                <li><img src="images/apple 1.svg"></li>
-                <li><img src="images/Group 49.svg" alt=""></li>
-                <li><img src="images/instagram 1.svg" alt=""></li>
-                <li><img src="images/linkedin 1.svg" alt=""></li>
-               
-            </ul>
-            <ul class="footer-terms">
-                <li>Terms and Conditions </li>
-                <li>Privacy Policy</li>
-                <li>Cookie Policy</li>
-                <li> Privacy Settings</li>
-            </ul>
+            <div>
+                <ul class="footer-logo">
+                    <li><img src="images/apple 1.svg"></li>
+                    <li><img src="images/Group 49.svg" alt=""></li>
+                    <li><img src="images/instagram 1.svg" alt=""></li>
+                    <li><img src="images/linkedin 1.svg" alt=""></li>
+
+                </ul>
+            </div>
+            <div>
+                <ul class="footer-terms">
+                    <li>Terms and Conditions </li>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li> Privacy Settings</li>
+                </ul>
+            </div>
         </div>
-        <p class="footer-foot">
-            Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
-        </p>
+        <div>
+            <p class="footer-foot">
+                Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+            </p>
+        </div>
     </footer>
 
 </body>
