added some styles

--- a/index.html
+++ b/index.html
@@ -60,20 +60,23 @@
             </div>
 
             <div class="video-container">
-                <div>
-                    <img src="images/Rectangle 4.png" alt="">
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                <div class="imagediv">
+                    <img  src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. <br> Play games Instantly on Gamer.</p>
                 </div>
-                <div>
-                    <img src="images/Rectangle 5.png" alt="">
+                <div class="imagediv">
+                    <img  src="images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
-                <div>
-                    <img src="images/Rectangle 6.png" alt="">
+                <div class="imagediv" >
+                    <img class="hoverdiv" src="images/Rectangle 6.png" alt="">
+                    <div class="middle">
+                        <div class="text">John Doe</div>
+                      </div>
                     <p>Breaking game records like OG</p>
                 </div>
-                <div>
-                    <img src="images/Rectangle 7.png" alt="">
+                <div class="imagediv">
+                    <img  src="images/Rectangle 7.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
@@ -81,24 +84,25 @@
         </section>
         <!-- video section ends here -->
         <!-- online game section starts -->
-        <section class="online-game-container">
-            <div>
-                <h3>Play Instantly,
-                    No Downloads
+        <section class="online-game-container" >
+            <div class="online-game-content">
+                <h3 class="online-game-tittle">Play Instantly,<br>
+                    No Downloads <br>
                     No Installs.</h3>
-                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                <p class="online-game-description">Play games online for free without downloading. Just click the Play button and play instantly in your
                     browser.</p>
             </div>
-            <div>
-                <img src="images/Rectangle 66.png" alt="">
-                <img src="images/Rectangle 55.png" alt="">
+            <div class="online-game-img">
+                <img class="online-game-img1" src="images/Rectangle 55.png" alt="">
+                <img class="online-game-img2" src="images/Rectangle 66.png" alt="">
+                
 
             </div>
         </section>
         <!-- game type section  starts-->
         <section class="game-type">
             <div class="game-type-container">
-                <button>Action Games</button>
+                <button >Action Games</button>
                 <button>Adventure Games</button>
                 <button id="arcade">Arcade Games</button>
                 <button>Educational Games</button>
@@ -107,6 +111,7 @@
         </section>
     </main>
     <footer class="footer">
+        <!-- footer starts here -->
         <div class="logo">
             <img src="images/Frame.png" alt="">
             <p class="footer-tittle"><span>G</span>amer</p>
