--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
 <body>
@@ -39,9 +40,9 @@
                 <h3 class="tittle-1">Play Like The</h3>
                 <h1 class="tittle-2">G.O.A.T</h1>
                 <ul>
-                    <li>1-Click instant play</li>
-                    <li>No Download</li>
-                    <li>1000s of supported online games</li>
+                    <li><i class="fas fa-user"></i>Click instant play</li>
+                    <li><i class="fas fa-user"></i>No Download</li>
+                    <li><i class="fas fa-user"></i>1000s of supported online games</li>
                 </ul>
                 <button class="btn-1">SIGN IN</button>
                 <button class="btn-2">GO ROGUE</button>
