--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <button class="btn-2">GO ROGUE</button>
 
             </div>
-            <div>
-                <img src="images/Group 18.png" alt="">
+            <div >
+                <img class="goat-image" src="images/Group 18.png" alt="">
             </div>
         </section>
         <!-- goat section ends -->
