--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="imagediv" >
                     <img class="hoverdiv" src="images/Rectangle 6.png" alt="">
                     <div class="middle">
-                        <div class="text">John Doe</div>
+                        <span class="video-icon">▶️</span>
                       </div>
                     <p>Breaking game records like OG</p>
                 </div>
